# executorlib

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  codemeta.json  pyproject.toml  setup.cfg  setup.py
.ci_support/: build_notebooks.sh  check.py  environment-docs.yml  environment-integration.yml  environment-mini.yml  environment-mpich.yml  environment-old.yml  environment-openmpi.yml  environment-slurm.yml  environment-uml.yml  environment-win.yml  environment.yml  kenerl.json  kernel.json  mpi4pywrapper.py  release.py
.github/: delete-merged-branch-config.yml
.github/workflows/: UpdateDependabotPR.yml  automerge.yml  benchmark.yml  benchmarl.yml  black.yml  check-macos-latest.yml  dependabot.yml  deploy.yml  format_black.yml  joss.yml  minimal.yml  mypy.yml  notebooks.yml  pipeline.yml  pypicheck.yml  unittest-flux-mpich.yml  unittest-flux-openmpi.yml  unittest-flux.yml  unittest-mpich.yml  unittest-openmpi-11.yml  unittest-openmpi-12.yml  unittest-openmpi-13.yml  unittest-openmpi-latest.yml  unittest-openmpi.yml  unittest-win.yml  unittest.yml  unittest_by_path.yml  unittest_by_path_with_env.yml  unittest_by_path_with_pythonpath.yml  unittests-old.yml
binder/: environment.yml  kernel.json  postBuild
docs/: _config.yml  _toc.yml  api.rst  application.md  comparison.md  concepts.md  coupling.md  development.md  flux.md  installation.md  persona.md  resource_dict.md  trouble_shooting.md
docs/paper/: paper.bib  paper.md
docs/source/: comparison.md  conf.py  development.md  examples.md  index.rst  installation.md  interfaces.md
docs/superpowers/: discoverability-manual-steps.md
executorlib/: __init__.py  _version.py  api.py  interfaces.py
executorlib/backend/: __init__.py  cache_parallel.py  cache_serial.py  interactive_parallel.py  interactive_serial.py
executorlib/base/: executor.py
executorlib/cache/: backend.py  executor.py  hdf.py  queue_spawner.py  shared.py  subprocess_spawner.py  task_scheduler.py
executorlib/executor/: __init__.py  base.py  flux.py  single.py  slurm.py
executorlib/interactive/: __init__.py  backend.py  blockallocation.py  create.py  dependencies.py  dependency.py  executor.py  flux.py  fluxspawner.py  onetoone.py  shared.py  slurm.py  slurmspawner.py
executorlib/interfaces/: flux.py  local.py  single.py  slurm.py
executorlib/shared/: __init__.py  cache.py  communication.py  executor.py  inputcheck.py  interface.py  plot.py  serialize.py  spawner.py
executorlib/shell/: __init__.py  executor.py  interactive.py
executorlib/standalone/: __init__.py  batched.py  cache.py  command.py  error.py  hdf.py  inputcheck.py  json.py  plot.py  queue.py  scheduler.py  select.py  serialize.py  slurm_command.py  split.py  thread.py
executorlib/task_scheduler/: __init__.py  base.py
notebooks/: 0-hpc-schedulers.ipynb  1-local.ipynb  1-single-node.ipynb  2-hpc-cluster.ipynb  2-hpc-submission.ipynb  3-hpc-allocation.ipynb  3-hpc-job.ipynb  4-developer.ipynb  5-1-flux-cluster-gpaw-bulk-modulus.ipynb  5-1-gpaw.ipynb  5-2-flux-job-gpaw-bulk-modulus.ipynb  5-2-quantum-espresso.ipynb  5-3-flux-cluster-qe-bulk-modulus.ipynb  5-4-flux-job-qe-bulk-modulus.ipynb  5-developer.ipynb  examples.ipynb
pympipool/: __init__.py  __main__.py  _version.py  common.py  flux_executor.py  mpi_executor.py  mpiexec.py  mpipool.py  socketcommunication.py
pympipool/backend/: cache_serial.py  interactive_parallel.py  interactive_serial.py  mpiexec.py  mpiexec_cache.py  mpiexec_interactive.py  serial.py  serial_cache.py
pympipool/cache/: __main__.py  backend.py  executor.py  shared.py
pympipool/dependencies/: __init__.py  executor.py
pympipool/executor/: mpiexec.py  mpipool.py
pympipool/external_interfaces/: communication.py  executor.py  meta.py  pool.py
pympipool/flux/: __init__.py  executor.py  fluxbroker.py  fluxtask.py
pympipool/interactive/: __init__.py  dependencies.py  executor.py  flux.py
pympipool/interfaces/: base.py  fluxbroker.py  fluxtask.py  taskbroker.py  taskexecutor.py
pympipool/legacy/: __init__.py  interface.py  legacybroker.py  legacytask.py
pympipool/mpi/: __init__.py  executor.py  mpibroker.py  mpitask.py
pympipool/parallel_executors/: mpiexec.py  mpipool.py
pympipool/queue/: executor.py  pool.py
pympipool/scheduler/: __init__.py  flux.py  local.py  mpi.py  slurm.py  universal.py
pympipool/share/: communication.py  executor.py  parallel.py  pool.py  serial.py
pympipool/shared/: __init__.py  backend.py  base.py  broker.py  communication.py  connections.py  dependencies.py  executor.py  executorbase.py  innterface.py  inputcheck.py  interface.py  plot.py  taskexecutor.py
pympipool/shared_functions/: broker.py  external_interfaces.py  parallel_executors.py  serial.py  thread.py
pympipool/shell/: __init__.py  executor.py  interactive.py
pympipool/slurm/: __init__.py  executor.py
src/executorlib/: __init__.py  _version.py  api.py
tests/: test_args.py  test_backend_interactive_serial.py  test_backend_serial.py  test_base_executor_queue.py  test_cache_backend_execute.py  test_cache_executor_interactive.py  test_cache_executor_mpi.py  test_cache_executor_pysqa_flux.py  test_cache_executor_serial.py  test_cache_file_executor.py  test_cache_fileexecutor_mpi.py  test_cache_fileexecutor_serial.py  test_cache_hdf.py  test_cache_shared.py  test_class_callable.py  test_cmd_parser.py  test_communicator_split.py  test_connection.py  test_dependencies_executor.py  test_exception.py  test_executor.py  test_executor_backend_flux.py  test_executor_backend_mpi.py  test_executor_backend_mpi_noblock.py  test_executor_conda.py  test_flux.py  test_flux_executor.py  test_fluxclusterexecutor.py  test_fluxjobexecutor.py  test_fluxjobexecutor_plot.py  test_fluxpythonspawner.py  test_future.py  test_futurepool.py  test_integration_pyiron_workflow.py  test_interactive_dependencies.py  test_interactive_future_arguments.py  test_interactive_slurmspawner.py  test_interface.py  test_liam.py  test_local_executor.py  (+55 more)
tests/benchmark/: llh.py  test_results.py
(+120 files in other folders)
